// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BidButton render level: 1; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  1 ♣
</Button>
`;

exports[`BidButton render level: 1; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  1 ♣
</Button>
`;

exports[`BidButton render level: 1; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  1 ♦
</Button>
`;

exports[`BidButton render level: 1; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  1 ♦
</Button>
`;

exports[`BidButton render level: 1; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  1 ♥
</Button>
`;

exports[`BidButton render level: 1; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  1 ♥
</Button>
`;

exports[`BidButton render level: 1; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  1 N
</Button>
`;

exports[`BidButton render level: 1; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  1 N
</Button>
`;

exports[`BidButton render level: 1; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  1 ♠
</Button>
`;

exports[`BidButton render level: 1; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  1 ♠
</Button>
`;

exports[`BidButton render level: 2; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  2 ♣
</Button>
`;

exports[`BidButton render level: 2; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  2 ♣
</Button>
`;

exports[`BidButton render level: 2; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  2 ♦
</Button>
`;

exports[`BidButton render level: 2; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  2 ♦
</Button>
`;

exports[`BidButton render level: 2; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  2 ♥
</Button>
`;

exports[`BidButton render level: 2; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  2 ♥
</Button>
`;

exports[`BidButton render level: 2; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  2 N
</Button>
`;

exports[`BidButton render level: 2; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  2 N
</Button>
`;

exports[`BidButton render level: 2; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  2 ♠
</Button>
`;

exports[`BidButton render level: 2; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  2 ♠
</Button>
`;

exports[`BidButton render level: 3; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  3 ♣
</Button>
`;

exports[`BidButton render level: 3; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  3 ♣
</Button>
`;

exports[`BidButton render level: 3; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  3 ♦
</Button>
`;

exports[`BidButton render level: 3; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  3 ♦
</Button>
`;

exports[`BidButton render level: 3; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  3 ♥
</Button>
`;

exports[`BidButton render level: 3; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  3 ♥
</Button>
`;

exports[`BidButton render level: 3; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  3 N
</Button>
`;

exports[`BidButton render level: 3; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  3 N
</Button>
`;

exports[`BidButton render level: 3; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  3 ♠
</Button>
`;

exports[`BidButton render level: 3; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  3 ♠
</Button>
`;

exports[`BidButton render level: 4; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  4 ♣
</Button>
`;

exports[`BidButton render level: 4; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  4 ♣
</Button>
`;

exports[`BidButton render level: 4; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  4 ♦
</Button>
`;

exports[`BidButton render level: 4; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  4 ♦
</Button>
`;

exports[`BidButton render level: 4; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  4 ♥
</Button>
`;

exports[`BidButton render level: 4; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  4 ♥
</Button>
`;

exports[`BidButton render level: 4; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  4 N
</Button>
`;

exports[`BidButton render level: 4; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  4 N
</Button>
`;

exports[`BidButton render level: 4; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  4 ♠
</Button>
`;

exports[`BidButton render level: 4; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  4 ♠
</Button>
`;

exports[`BidButton render level: 5; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  5 ♣
</Button>
`;

exports[`BidButton render level: 5; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  5 ♣
</Button>
`;

exports[`BidButton render level: 5; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  5 ♦
</Button>
`;

exports[`BidButton render level: 5; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  5 ♦
</Button>
`;

exports[`BidButton render level: 5; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  5 ♥
</Button>
`;

exports[`BidButton render level: 5; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  5 ♥
</Button>
`;

exports[`BidButton render level: 5; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  5 N
</Button>
`;

exports[`BidButton render level: 5; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  5 N
</Button>
`;

exports[`BidButton render level: 5; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  5 ♠
</Button>
`;

exports[`BidButton render level: 5; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  5 ♠
</Button>
`;

exports[`BidButton render level: 6; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  6 ♣
</Button>
`;

exports[`BidButton render level: 6; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  6 ♣
</Button>
`;

exports[`BidButton render level: 6; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  6 ♦
</Button>
`;

exports[`BidButton render level: 6; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  6 ♦
</Button>
`;

exports[`BidButton render level: 6; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  6 ♥
</Button>
`;

exports[`BidButton render level: 6; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  6 ♥
</Button>
`;

exports[`BidButton render level: 6; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  6 N
</Button>
`;

exports[`BidButton render level: 6; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  6 N
</Button>
`;

exports[`BidButton render level: 6; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  6 ♠
</Button>
`;

exports[`BidButton render level: 6; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  6 ♠
</Button>
`;

exports[`BidButton render level: 7; suit: CLUBS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  7 ♣
</Button>
`;

exports[`BidButton render level: 7; suit: CLUBS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  7 ♣
</Button>
`;

exports[`BidButton render level: 7; suit: DIAMONDS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  7 ♦
</Button>
`;

exports[`BidButton render level: 7; suit: DIAMONDS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="orange"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  7 ♦
</Button>
`;

exports[`BidButton render level: 7; suit: HEARTS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  7 ♥
</Button>
`;

exports[`BidButton render level: 7; suit: HEARTS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  7 ♥
</Button>
`;

exports[`BidButton render level: 7; suit: NOTRUMPS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  7 N
</Button>
`;

exports[`BidButton render level: 7; suit: NOTRUMPS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="black"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  7 N
</Button>
`;

exports[`BidButton render level: 7; suit: SPADES, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  7 ♠
</Button>
`;

exports[`BidButton render level: 7; suit: SPADES, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  7 ♠
</Button>
`;

exports[`BidButton render suit: DOUBLE, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  X
</Button>
`;

exports[`BidButton render suit: DOUBLE, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="red"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  X
</Button>
`;

exports[`BidButton render suit: PASS, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  PASS
</Button>
`;

exports[`BidButton render suit: PASS, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="green"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  PASS
</Button>
`;

exports[`BidButton render suit: REDOUBLE, isDisabled: false 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={false}
  onClick={[Function]}
  size="small"
>
  XX
</Button>
`;

exports[`BidButton render suit: REDOUBLE, isDisabled: true 1`] = `
<Button
  as="button"
  className="bid-button"
  color="blue"
  disabled={true}
  onClick={[Function]}
  size="small"
>
  XX
</Button>
`;
